# audio-synth

./: .gitignore  .gitlab-ci.yml  AUDIOTEST  CMakeLists.txt  CTestTestfile.cmake  LICENSE  README.md  build.sh  coverage.sh  run.sh  save.txt  test.sh
audio_synth/: CMakeLists.txt  main.c
doc/: .gitignore  Cahier_des_Charges.md  Compte rendu 2eme réunion  Compte_rendu_2eme_reunion.md  Doxyfile  GUI_Parameters.md  data_structure.ods  features.md
doc/comptes_rendus_reunions/: compte_rendu_2.md
docs/: features.md
presets/: alien_lead.prst  default.prst  evolving_bass.prst  organ.prst  save_test.prst  terminator.prst
src/: CMakeLists.txt  clairdelune.mid  main.c  test midi 2 note.mid
src/Listmidi/: listDataRange.c  listDataRange.h  listMidi.c  listMidi.h  listmidi.c  listmidi.h
src/audio/: audio.c  audio.h  wav.c  wav.h
src/audio_fx/: audio_fx.c  audio_fx.h
src/audio_fx/ext_effects/: biquad.c
src/core/: audio_core.c  audio_core.h
src/core/note/: adsr.h  note.c  note.h  polyphony.c  polyphony.h
src/core/oscillator/: osc.c  osc.h
src/fichier/: fichier.c  fichier.h
src/fichier_midi/: elise.mid  mario2.mid  take.mid  test midi 2 note.mid  test midi une note.mid
src/gui/: SDL_Button.c  SDL_Button.h  gui.c  gui.h  keypad.c  keypad.h
src/midi/: midi.c  midi.h  midi_file.c  midi_file.h  midi_keyboard.c  midi_keyboard.h
src/note/: adsr.c  adsr.h  note.c  note.h  polyphony.c  polyphony.h
src/oscillator/: osc.c  osc.h
src/sys_param/: sys_param.c  sys_param.h
src/sys_param/xml/: preset_xml.c  preset_xml.h
src/system/: error_handler.c  error_handler.h
test/: CMakeLists.txt  test.c  test.h
test/core_test/: core_test.c  core_test.h
test/lib/cmocka-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  config.h  install_manifest.txt
test/lib/cmocka-build/doc/: Doxyfile.docs  Makefile  cmake_install.cmake
test/lib/cmocka-build/example/: CTestTestfile.cmake  Makefile  allocate_module_test  assert_macro_test  assert_module_test  cmake_install.cmake  simple_test
test/lib/cmocka-build/example/mock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/lib/cmocka-build/example/mock/chef_wrap/: CTestTestfile.cmake  Makefile  cmake_install.cmake  waiter_test_wrap
test/lib/cmocka-build/example/mock/uptime/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_uptime  uptime
test/lib/cmocka-build/include/: Makefile  cmake_install.cmake
test/lib/cmocka-build/src/: Makefile  cmake_install.cmake  libcmocka.so.0.5.1
test/list_midi_test/: list_midi_test.c  list_midi_test.h
test/midi/: midi_list.c  midi_list.h
test/midi_test/: midi_list.c  midi_list_data_Range_test.c  midi_list_data_Range_test.h  midi_list_test.c  midi_list_test.h
test/note_test/: note_test.c  note_test.h  polyphony_test.c  polyphony_test.h
test/oscillator/: osc_test.c  osc_test.h
test/oscillator_test/: osc_test.c  osc_test.h
test/sys_param_test/: sys_param_test.c  sys_param_test.h
test/wav_test/: wav_test.c  wav_test.h
